# swarmx-framework

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  HOW_TO_BUILD_GRAPHS.md  HOW_TO_BUILD_SWARMS.md  HOW_TO_BUILD_WORKFLOWS.md  HOW_TO_CREATE_AGENTS.md  HOW_TO_CREATE_TOOLS.md  USE_CASES.md
examples/: baseline_swarm.py  basic.py  gemini_small_task.py  stream_events.py
scripts/: secret_scan.py
swarm_x/: __init__.py  quickstart.py
swarm_x/agents/: __init__.py  base.py  registry.py  schemas.py
swarm_x/api/: __init__.py
swarm_x/cli/: main.py
swarm_x/config/: __init__.py  env.py  settings.py  yaml_loader.py
swarm_x/events/: __init__.py  callbacks.py  event_bus.py  event_types.py
swarm_x/handoff/: __init__.py  manager.py  schemas.py
swarm_x/mcp/: __init__.py  client.py
swarm_x/memory/: __init__.py  compression.py  context.py  session.py  shared_state.py  store.py
swarm_x/models/: __init__.py  _generic.py  base.py  factory.py  gemini.py  groq.py  ollama.py  openai.py
swarm_x/observability/: __init__.py  logging.py  metrics.py  tracing.py
swarm_x/orchestration/: __init__.py  engine.py  graph.py  router.py  swarm.py  workflow.py
swarm_x/schemas/: __init__.py  core.py
swarm_x/skills/: __init__.py  base.py  registry.py
swarm_x/streaming/: __init__.py  (+2 more)
swarmx-backup.git/: config  packed-refs
tests/: test_config.py  test_core.py  test_extensions.py
(+8 files in other folders)
